--- a/Q5/demo/pom.xml
+++ b/Q5/demo/pom.xml
@@ -57,7 +57,16 @@
 <!--			<artifactId>spring-kafka</artifactId>-->
 <!--			<version>2.1.0.RELEASE</version>-->
 <!--		</dependency>-->
-
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>2.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>javax.mail-api</artifactId>
+			<version>1.6.2</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
