--- a/Q5/demo/src/main/resources/application.properties
+++ b/Q5/demo/src/main/resources/application.properties
@@ -12,3 +12,14 @@ spring.datasource.max-idle = 10
 spring.datasource.max-wait = 8000
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
+## QuartzProperties
+spring.quartz.job-store-type = jdbc
+spring.quartz.properties.org.quartz.threadPool.threadCount = 5
+## MailProperties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=assignment5nuclei@gmail.com
+spring.mail.password=piyush_mehta24s
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
