--- a/Q5/demo/src/main/resources/application.properties
+++ b/Q5/demo/src/main/resources/application.properties
@@ -2,13 +2,17 @@ spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/newsletter?autoreconnect = true
 spring.datasource.username = root
 spring.datasource.password = piyush_mehta24
+spring.jpa.show-sql=true
 spring.datasource.testOnBorrow = true
 spring.datasource.testWhileIdle = true
 spring.datasource.timeBetweenEvictionRunsMillis = 60000
 spring.datasource.minEvictableIdleTimeMillis = 30000
 spring.datasource.validationQuery = SELECT 1
 spring.datasource.max-active = 15
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.datasource.max-idle = 10
 spring.datasource.max-wait = 8000
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
