--- a/Q5/demo/src/main/resources/application.yaml
+++ b/Q5/demo/src/main/resources/application.yaml
@@ -1,41 +1,35 @@
-
-# ==============================================================
-# = Data Source
-# ==============================================================
-spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/newsletter?autoreconnect = true
-spring.datasource.username = root
-spring.datasource.password = piyush_mehta24
-# ==============================================================
-# = Keep the connection alive if idle for a long time (needed in production)
-# ==============================================================
-spring.datasource.testWhileIdle = true
-spring.datasource.validationQuery = SELECT 1
-
-# ==============================================================
-# = Show or not log for each sql query
-# ==============================================================
-spring.jpa.show-sql = true
-
-# ==============================================================
-# = Hibernate ddl auto (create, create-drop, update)
-# ==============================================================
-spring.jpa.hibernate.ddl-auto = update
-
-# ==============================================================
-# = The SQL dialect makes Hibernate generate better SQL for the chosen database
-# ==============================================================
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-
-# ==============================================================
-# = Initialize the database using data.sql script
-# ==============================================================
-spring.datasource.initialization-mode=always
-
-#logging.level.org.springframework.security=DEBUG
-spring.datasource.testOnBorrow = true
-spring.datasource.timeBetweenEvictionRunsMillis = 60000
-spring.datasource.minEvictableIdleTimeMillis = 30000
-spring.datasource.max-active = 15
-spring.datasource.max-idle = 10
-spring.datasource.max-wait = 8000
+server:
+  port: 9000
+spring:
+  kafka:
+    consumer:
+      bootstrap-servers: localhost:9092
+      group-id: group-id
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+    producer:
+      bootstrap-servers: localhost:9092
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+  datasource:
+    driverClassName: com.mysql.cj.jdbc.Driver
+    initialization-mode: always
+    max-active: 15
+    max-idle: 10
+    max-wait: 8000
+    minEvictableIdleTimeMillis: 30000
+    password: piyush_mehta24
+    testOnBorrow: true
+    testWhileIdle: true
+    timeBetweenEvictionRunsMillis: 60000
+    url: jdbc:mysql://localhost:3306/newsletter?autoreconnect = true
+    username: root
+    validationQuery: SELECT 1
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5Dialect
+    show-sql: true
